# Quickie

./: CLAUDE.md  README.md  install.sh  pyproject.toml
quickie/: __init__.py  app.py  config.py  main_window.py  settings_screen.py  style.tcss
