[project]
name = "quickie"
version = "0.1.0"
description = "A minimal Python scratchpad for quick, throwaway scripts"
requires-python = ">=3.13"
license = "MIT"
readme = "README.md"
keywords = ["python", "scratchpad", "terminal", "tui", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors",
]
dependencies = [
    "textual[syntax]>=6.6.0",
]

[project.scripts]
quickie = "quickie.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
